--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   mongodb:
     image: mongo:4.4.6
@@ -7,11 +6,19 @@ services:
     networks:
       - chat-ui
   ollama-service:
-    image: ollama/ollama
+    image: deepseek-v3:latest
+    runtime: nvidia
+    environment:
+      - OLLAMA_ORIGINS="*"
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_CAPABILITIES=all
+
     ports:
       - 11434:11434
+    entrypoint: ["/bin/bash", "/scripts/start_ollama.sh"]
     volumes:
       - ./ollama:/root/.ollama
+      - ./scripts:/scripts
     networks:
       - chat-ui
   chat-ui:
